@@ -38,8 +38,10 @@ namespace mer{
 	return updateWrss();
     }
 
-    void glmerResp::updateDcmp(Rcpp::NumericVector& cmp) const {
-	merResp::updateDcmp(cmp);
+    void glmerResp::updateDcmp(Rcpp::List& ll) const {
+	merResp::updateDcmp(ll);
+	Rcpp::List devcomp = ll["devcomp"];
+	Rcpp::NumericVector cmp = devcomp["cmp"];
 	Rcpp::NumericVector dr = devResid();
 	cmp["drsum"] = accumulate(dr.begin(), dr.end(), double());
     }
