@@ -25,4 +25,13 @@ namespace mer{
 	copy(gamma.begin(), gamma.end(), d_mu.begin());
 	return updateWrss();
     }
+
+    void lmerResp::updateDcmp(Rcpp::List& ll) const {
+	merResp::updateDcmp(ll);
+	Rcpp::List devcomp = ll["devcomp"];
+	Rcpp::NumericVector cmp = devcomp["cmp"];
+	Rcpp::IntegerVector dims = devcomp["dims"];
+	cmp["sigmaREML"] = cmp["sigmaML"] * sqrt((double)dims["n"]/(double)dims["nmp"]);
+    }
+
 }
