@@ -36,4 +36,7 @@ namespace mer{
 	return updateWrss();
     }
 
+    void nlmerResp::updateDcmp(Rcpp::List& ll) const {
+	merResp::updateDcmp(ll);
+    }
 }
